--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>vue-readme</title>
+
+    <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
   </head>
+  <style>
+    body {
+      background-color: #fcfdff;
+    }
+  </style>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
